test/classes/errors/nilability-assign/assign-nonnil-borrowed-from-oknil-nil.chpl
//  lhs: borrowed!  rhs: nil?  error: nlb

class MyClass {  var x: int;  }

var lhs = new borrowed MyClass();


lhs = nil;

compilerError("done");

