test/classes/errors/nilability-assign/assign-nonnil-borrowed-from-oknil-nil.good
assign-nonnil-borrowed-from-oknil-nil.chpl:8: error: cannot assign to borrowed MyClass from nil
